--- a/languages/json.lang
+++ b/languages/json.lang
@@ -4,7 +4,7 @@ multi_line_comment <- cap{'//' (![\n\r] .)*, "comment"}
 single_line_comment <- cap{'/*' (!'*/' .)* '*/'?  , "comment"}
 comment <- multi_line_comment / single_line_comment
 
-escape_sequence <- cap{'\\' (!([ux] / digit) . / 'u' xdigit xdigit xdigit xdigit / 'x' xdigit xdigit / digit digit? digit?), "constant.specialChar" }
+escape_sequence <- cap{'\\' (!([ux] / digit) . / 'u' xdigit xdigit xdigit xdigit / 'x' xdigit xdigit / digit digit? digit?), "constant.string.escape" }
 single_quote_string <- "'" (![\\'\n\r] . / escape_sequence)* "'"
 double_quote_string <- '"' (![\\"\n\r] . / escape_sequence)* '"'
 string  <- cap{
